# rapiro_ros

./: .gitignore  README.md
rapiro_arduino/: CMakeLists.txt  package.xml
rapiro_arduino/src/rapiro/: rapiro.h  rapiro.ino
rapiro_cmd/: CMakeLists.txt  package.xml  setup.py
rapiro_cmd/config/: motions.yaml
rapiro_cmd/launch/: rapiro_cmd.launch
rapiro_cmd/nodes/: rapiro_cmd_node.py
rapiro_cmd/src/rapiro_cmd/: RapiroMotionCmd.py  RapiroMsgRelay.py  RapiroOdom.py  __init__.py
rapiro_description/: CMakeLists.txt  package.xml
rapiro_description/meshes/: backpack.stl  l_arm.stl  l_hand.stl  r_arm.stl  r_hand.stl  shoulder.stl
rapiro_description/urdf/: rapiro.urdf
rapiro_msgs/: CMakeLists.txt  package.xml
rapiro_msgs/msg/: JointIDs.msg  JointState.msg  Range.msg  Trajectory.msg
rapiro_msgs/srv/: Ranging.srv
rapiro_ros/: CMakeLists.txt  package.xml
